# analytics-mcp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADR.md
src/analytics_mcp/: __init__.py  cli.py  database.py  schemas.py  server.py
tests/: conftest.py  test_database.py  test_server_client.py  test_tools.py
